fix alignment

--- a/style.css
+++ b/style.css
@@ -1,10 +1,13 @@
+
+
 body{
     display: flex;
     flex-direction: column;
-    justify-content: space-between;
     align-items: center;
+    justify-content: center;
     height: 100%;
     width: 100%;
+    margin: 0;
 }
 
 .header{
@@ -37,23 +40,30 @@ a{
     font-size: 18px;
     
 }
-/*hero section*/
-.hero {
+.hero-container{
     display:flex;
-    justify-content:center;
+    justify-content:space-around;
     align-items: center;
     background-color: #1F2937;
     padding: 75px 50px;
     gap: 75px;
-    flex: auto;
     width: 100%;
+
 }
+
+.hero{
+    display: flex;
+    justify-content: center;
+}
+/*hero section*/
+
 .content{
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    width: 25%;
+    max-width: 50%;
+    flex: auto;
 
 }
 .big{
@@ -77,7 +87,7 @@ a{
     align-self: flex-start;
 
 }
-.hero img{
+.hero-container img{
     width: 300px;
     height: 150px;
     background-color: rgb(122, 122, 122);
@@ -125,7 +135,7 @@ a{
     background-color: #E5E7EB;
     display: flex;
     flex-direction: column;
-    justify-content: center;
+    justify-content: flex-start;
     align-items: center;
     padding: 100px 0px;
     width: 100%;
@@ -134,8 +144,8 @@ a{
 .quote{
     display: flex;
     flex-direction: column;
-    justify-content: center;
-    align-items: center;
+    justify-content: flex-start;
+    align-items: flex-start;
     max-width: 50%;
 }
 
@@ -153,3 +163,16 @@ font-weight: bold;
 padding-right: 10px;
 
 }
+
+
+
+/*.hero {
+    display:flex;
+    justify-content:flex-start;
+    align-items: center;
+    background-color: #1F2937;
+    padding: 75px 50px;
+    gap: 75px;
+    flex: auto;
+    max-width: 50%;
+}   */
